#update xuất phiếu

--- a/Views/DangKyXetTuyenThang/Index.cshtml
+++ b/Views/DangKyXetTuyenThang/Index.cshtml
@@ -64,7 +64,7 @@
                 <div class="row">
                     <div class="col-xxl-12">
                         <center>
-                            <button id="downButton" class="btn btn-outline-success"> Tải phiếu tổng hợp</button>
+                            <button id="downButton" class="btn btn-outline-success"> Xuất phiếu tổng hợp</button>
                             <a class="btn btn-outline-primary" onclick="bt_Insert_Dknv_on_divView_Click(0,0,0)">Thêm nguyện vọng</a>
                         </center>
                     </div>
