--- a/Views/DangKyXetTuyens/dkxtthptqg.cshtml
+++ b/Views/DangKyXetTuyens/dkxtthptqg.cshtml
@@ -1025,4 +1025,9 @@
         $("#myToast .toast").removeClass("bg-success bg-danger").addClass(bgColor);
         $("#myToast").toast("show");
     }
+    $(document).ready(function () {
+        $('#downButton').click(function () {
+            window.location.href = '/ExportFile/DownloadFile_XetTuyenKQTQG';
+        });
+    });
 </script>
