#Update site admin - thí sinh

--- a/Areas/Admin/Views/Shared/_Layout_Admin.cshtml
+++ b/Areas/Admin/Views/Shared/_Layout_Admin.cshtml
@@ -75,12 +75,12 @@
                         <!-- Sidenav Accordion (Dashboard)-->
                         <a class="nav-link" href="@Url.Action("Index", "ThiSinhDangKys")">
                             <div class="nav-link-icon"><i data-feather="activity"></i></div>
-                            Thông tin thí sinh
+                            Thí sinh đăng ký
                         </a>
-                        <a class="nav-link" href="@Url.Action("Index", "DangKyXetTuyens")">
+                        @*<a class="nav-link" href="@Url.Action("Index", "DangKyXetTuyens")">
                             <div class="nav-link-icon"><i data-feather="grid"></i></div>
                             Đăng ký xét tuyển
-                        </a>
+                        </a>*@
                         <a class="nav-link" href="@Url.Action("Index", "ToHopMons")">
                             <div class="nav-link-icon"><i data-feather="filter"></i></div>
                             Tổ hợp môn
