--- a/Areas/Admin/Views/ThiSinhDangKys/Index.cshtml
+++ b/Areas/Admin/Views/ThiSinhDangKys/Index.cshtml
@@ -1,12 +1,24 @@
 ﻿<!-- Thêm thư viện -->
 @model PagedList.IPagedList<HDU_AppXetTuyen.Models.ThiSinhDangKy>
 @using PagedList.Mvc;
+
 <!-- Kết thúc-->
 @{
     ViewBag.Title = "Index";
     Layout = "~/Areas/Admin/Views/Shared/_Layout_Admin.cshtml";
 }
+<link rel="stylesheet" href="https://cdn.datatables.net/1.13.5/css/jquery.dataTables.min.css" />
+<link rel="stylesheet" href="https://cdn.datatables.net/fixedcolumns/4.3.0/css/fixedColumns.dataTables.min.css" />
+<style>
+    /* Ensure that the demo table scrolls */
+    th, td {
+        white-space: nowrap;
+    }
 
+    div.dataTables_wrapper {
+        margin: 0 auto;
+    }
+</style>
 <header class="page-header page-header-compact page-header-light border-bottom bg-white mb-2">
     <div class="container-fluid px-4">
         <div class="page-header-content">
@@ -30,81 +42,112 @@
 <div class="container-fluid px-4">
     <div class="card">
         <div class="card-body">
-            <table class="table table-bordered table-responsive">
-                <tr>
-                    <th>
-                        @Html.DisplayNameFor(model => model.FirstOrDefault().ThiSinh_HoLot)
-                    </th>
-                    <th>
-                        @Html.DisplayNameFor(model => model.FirstOrDefault().ThiSinh_Ten)
-                    </th>
-                    <th>
-                        @Html.DisplayNameFor(model => model.FirstOrDefault().ThiSinh_DienThoai)
-                    </th>
-                    <th>
-                        @Html.DisplayNameFor(model => model.FirstOrDefault().ThiSinh_Email)
-                    </th>
+            <div class="col-12 table-responsive">
+                <table id="myTable" class="stripe row-border order-column cell-border" style="width:100%">
+                    <thead>
+                        <tr>
+                            <th>
+                                @Html.DisplayNameFor(model => model.FirstOrDefault().ThiSinh_HoLot)
+                            </th>
+                            <th>
+                                @Html.DisplayNameFor(model => model.FirstOrDefault().ThiSinh_Ten)
+                            </th>
+                            <th>
+                                @Html.DisplayNameFor(model => model.FirstOrDefault().ThiSinh_DienThoai)
+                            </th>
+                            <th>
+                                @Html.DisplayNameFor(model => model.FirstOrDefault().ThiSinh_Email)
+                            </th>
 
-                    <th>
-                        @Html.DisplayNameFor(model => model.FirstOrDefault().ThiSinh_NgaySinh)
-                    </th>
-                    <th>
-                        @Html.DisplayNameFor(model => model.FirstOrDefault().ThiSinh_HoKhauThuongTru)
-                    </th>
-                    <th>
-                        Ngày đăng ký
-                    </th>
+                            <th>
+                                @Html.DisplayNameFor(model => model.FirstOrDefault().ThiSinh_NgaySinh)
+                            </th>
+                            <th>
+                                @Html.DisplayNameFor(model => model.FirstOrDefault().ThiSinh_HoKhauThuongTru)
+                            </th>
+                            <th>
+                                Ngày đăng ký
+                            </th>
 
-                    <th style="text-align:center">
-                        Hành động
-                    </th>
-                </tr>
+                            <th style="text-align:center">
+                                Hành động
+                            </th>
+                        </tr>
+                    </thead>
+                    <tbody>
+                        @foreach (var item in Model)
+                        {
+                            <tr>
+                                <td>
+                                    @Html.DisplayFor(modelItem => item.ThiSinh_HoLot)
+                                </td>
+                                <td>
+                                    @Html.DisplayFor(modelItem => item.ThiSinh_Ten)
+                                </td>
+                                <td>
+                                    @Html.DisplayFor(modelItem => item.ThiSinh_DienThoai)
+                                </td>
+                                <td>
+                                    @Html.DisplayFor(modelItem => item.ThiSinh_Email)
+                                </td>
 
-                @foreach (var item in Model)
-                {
-                    <tr>
-                        <td>
-                            @Html.DisplayFor(modelItem => item.ThiSinh_HoLot)
-                        </td>
-                        <td>
-                            @Html.DisplayFor(modelItem => item.ThiSinh_Ten)
-                        </td>
-                        <td>
-                            @Html.DisplayFor(modelItem => item.ThiSinh_DienThoai)
-                        </td>
-                        <td>
-                            @Html.DisplayFor(modelItem => item.ThiSinh_Email)
-                        </td>
+                                <td>
+                                    @Html.DisplayFor(modelItem => item.ThiSinh_NgaySinh)
+                                </td>
+                                <td>
+                                    @Html.DisplayFor(modelItem => item.ThiSinh_HoKhauThuongTru)
+                                </td>
+                                <td>
+                                    @{DateTime dateTime = DateTime.Parse(item.ThiSinh_NgayDangKy);
+                                        string formattedDate = dateTime.ToString("dd/MM/yyyy - HH:mm");
+                                        <div> @formattedDate </div>
+                                    }
 
-                        <td>
-                            @Html.DisplayFor(modelItem => item.ThiSinh_NgaySinh)
-                        </td>
-                        <td>
-                            @Html.DisplayFor(modelItem => item.ThiSinh_HoKhauThuongTru)
-                        </td>
-                        <td>
-                            @Html.DisplayFor(modelItem => item.ThiSinh_NgayDangKy)
-                        </td>
+                                </td>
 
-                        <td style="text-align:center; width:180px"> 
-                            <a class="btn btn-outline-success btn-sm" href="@Url.Action("Details","ThiSinhDangKys" , new { id = item.ThiSinh_ID })">  Xem </a>&nbsp;
-                            <a class="btn btn-outline-primary btn-sm m-1" href="@Url.Action("Edit","ThiSinhDangKys", new { id = item.ThiSinh_ID } )">  Sửa </a>&nbsp;
-                            <a class="btn btn-outline-danger btn-sm" href="@Url.Action("Delete","ThiSinhDangKys" , new { id = item.ThiSinh_ID })">  Xoá </a>&nbsp;
-                            @*<a class="btn btn-datatable" href="@Url.Action("Edit","ThiSinhDangKys")"><i data-feather="edit" class="text-primary"> </i> </a>
-        <a class="btn btn-datatable" href="@Url.Action("Details","ThiSinhDangKys")"><i data-feather="eye" class="text-success"></i></a>
-        <a class="btn btn-datatable" href="@Url.Action("Delete","ThiSinhDangKys")"><i data-feather="trash-2" class="text-danger"></i></a>*@
-                        </td>
-                    </tr>
-                }
+                                <td style="text-align:center; width:180px">
+                                    <a class="btn btn-outline-success btn-sm" href="@Url.Action("ThongTinThiSinh","ThiSinhDangKys" , new { id = item.ThiSinh_ID })">  Chi tiết </a>&nbsp;
+                                    <a class="btn btn-outline-primary btn-sm m-1" href="@Url.Action("Edit","ThiSinhDangKys", new { id = item.ThiSinh_ID } )">  Sửa </a>&nbsp;
+                                    @*<a class="btn btn-outline-danger btn-sm" href="@Url.Action("Delete","ThiSinhDangKys" , new { id = item.ThiSinh_ID })">  Xoá </a>&nbsp;*@
+                                    @*<a class="btn btn-datatable" href="@Url.Action("Edit","ThiSinhDangKys")"><i data-feather="edit" class="text-primary"> </i> </a>
+                                        <a class="btn btn-datatable" href="@Url.Action("Details","ThiSinhDangKys")"><i data-feather="eye" class="text-success"></i></a>
+                                        <a class="btn btn-datatable" href="@Url.Action("Delete","ThiSinhDangKys")"><i data-feather="trash-2" class="text-danger"></i></a>*@
+                                </td>
+                            </tr>
+                        }
+                    </tbody>
 
-            </table>
-            <!-- Thêm mã phân trang -->
-            <br />
-            Trang @(Model.PageCount < Model.PageNumber ? 0 : Model.PageNumber) / @Model.PageCount
+                </table>
+                <!-- Thêm mã phân trang -->
+                <br />
+                Trang @(Model.PageCount < Model.PageNumber ? 0 : Model.PageNumber) / @Model.PageCount
 
-            @Html.PagedListPager(Model, page => Url.Action("Index",
-                new { page }))
-            <!-- Kết thúc -->
+                @Html.PagedListPager(Model, page => Url.Action("Index",
+                    new { page }))
+                <!-- Kết thúc -->
+            </div>
         </div>
     </div>
 </div>
+<script src="https://cdn.datatables.net/1.13.5/js/jquery.dataTables.js"></script>
+<script src="https://cdn.datatables.net/fixedcolumns/4.3.0/js/dataTables.fixedColumns.min.js"></script>
+
+
+<script>
+
+
+    new DataTable('#myTable', {
+        fixedColumns: {
+            right: 1
+        },
+        paging: false,
+        scrollCollapse: true,
+        scrollX: true,
+        //scrollY: 300,
+        searching: true,
+        bInfo: false,
+        oLanguage: {
+            sSearch: "Tìm kiếm:"
+        }
+    });
+</script>
