--- a/Views/DangKyXetTuyens/dkxthocba.cshtml
+++ b/Views/DangKyXetTuyens/dkxthocba.cshtml
@@ -24,12 +24,11 @@
         <div class="page-header-content">
             <div class="row align-items-center justify-content-between pt-3">
                 <div class="col-auto mb-1">
-                    <h1 class="page-header-title  mb-2">
+                    <div class="page-header-title  mb-2">
                         <div class="page-header-icon"><i data-feather="list"></i></div>
-                        Sử dụng kết quả học tập ở THPT (Xét học bạ)
-                    </h1>
+                        <span>   Sử dụng kết quả học tập ở THPT (Xét học bạ)</span>                     
+                    </div>
                 </div>
-
             </div>
         </div>
     </div>
@@ -296,7 +295,7 @@
                             </div>
                         </div>
 
-                        </script>
+                      
                         <div class="row mb-3">
                             <div class="col-xxl-12" style="text-align:center">
                                 <input class="btn btn-primary" type="button" value="Đồng ý" onclick="bt_DongY_Update_Dkxt_NVM_OnClick()" ìd="bt_DongY_Update_Dkxt_NVM" />
