--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -89,20 +89,23 @@
                         </a>
                         <div class="collapse" id="menuPhuongThuc" data-bs-parent="#accordionSidenav"  >
                             <nav class="sidenav-menu-nested nav accordion" id="accordionSidenavPages">
-                                <a  class="nav-link style_wspacing" href="@Url.Action("dkxtthptqg", "DangKyXetTuyens")">
+                                <a class="nav-link style_wspacing" href="@Url.Action("dkxtthptqg", "DangKyXetTuyens")">
                                     Sử dụng KQ thi TN THPT
-                                </a>                            
-                                <a class="nav-link style_wspacing" href="@Url.Action("dkxthocba", "DangKyXetTuyens")" >
-                                   Sử dụng KQ học bạ THPT
+                                </a>
+                                <a class="nav-link style_wspacing" href="@Url.Action("dkxthocba", "DangKyXetTuyens")">
+                                    Sử dụng KQ học bạ THPT
                                 </a>
                                 <a class="nav-link style_wspacing" href="@Url.Action("Index", "DangKyXetTuyenThang")">
-                                    Tuyển thẳng theo Quy chế                                 
+                                    Tuyển thẳng theo Quy chế
                                 </a>
-                                <a class="nav-link style_wspacing" href="@Url.Action("Ielts", "DangKyXetTuyenKhac")" >
-                                    HS có chứng chỉ ngoại ngữ   
+                                <a class="nav-link style_wspacing" href="@Url.Action("Ielts", "DangKyXetTuyenKhac")">
+                                    SD chứng chỉ ngoại ngữ
                                 </a>
-                                <a class="nav-link style_wspacing" href="@Url.Action("DanhGia", "DangKyXetTuyenKhac")" >
-                                   SD KQ thi ĐG năng lực                               
+                                <a class="nav-link style_wspacing" href="@Url.Action("DanhGia", "DangKyXetTuyenKhac")">
+                                    SD KQ thi ĐG năng lực
+                                </a>
+                                <a class="nav-link style_wspacing" href="@Url.Action("dkdtnk", "DangKyXetTuyens")">
+                                   ĐK dự thi năng khiếu
                                 </a>
                             </nav>
                         </div>
