--- a/Views/Auth/Index.cshtml
+++ b/Views/Auth/Index.cshtml
@@ -1,4 +1,4 @@
-@model HDU_AppXetTuyen.Models.ThiSinhDangKy
+﻿@model HDU_AppXetTuyen.Models.ThiSinhDangKy
 @{
     ViewBag.Title = "Index";
     Layout = "~/Views/Shared/_Layout_auth.cshtml";
@@ -14,7 +14,7 @@
             $('#signupForm').show();
             $("#leftPanel").removeClass("col-lg-7").addClass("col-lg-5");
             $("#rightPanel").removeClass("col-lg-5").addClass("col-lg-7");
-           // showToast("Thông báo", "Hệ thống dừng tiếp nhận hồ sơ đăng ký!", "bg-info");
+            // showToast("Thông báo", "Hệ thống dừng tiếp nhận hồ sơ đăng ký!", "bg-info");
         });
 
         $('#showLogin').click(function (e) {
@@ -53,7 +53,7 @@
                         let data = response.data;
                         let huyentt = $('#register_huyentt');
                         huyentt.empty();
-                        huyentt.append($('<option></option>').val("0").text("Chọn huyện"));
+                        huyentt.append($('<option></option>').val("0").text("Chọn huyện.."));
                         $.each(data, function (index, item) {
                             huyentt.append($('<option></option>').val(item.Huyen_ID).text(item.Huyen_TenHuyen));
                         });
@@ -402,23 +402,23 @@
                                 <span id="errorMessage" class="small mb-1 text-danger"></span>
                             </div>
                             <div class="d-flex align-items-center justify-content-center mt-4 mb-0">
-                                <input class="btn btn-primary login-button" type="submit" onclick="submitForm()" value="Đăng nhập" />
+                                <input class="login-button" type="submit" onclick="submitForm()" value="Đăng nhập" style="width: 100%" />
                             </div>
                             <hr class="mt-3 mb-3" />
                             <div class="text-center mt-4">
-                                <div class="small"><a id="showSignup" style="text-decoration: none; color: #ff6a00;" href="#">Bạn chưa đăng kí thông tin? <b>Đăng kí tại đây</b></a></div>
+                                <div class="small"><a id="showSignup" style="text-decoration: none; color: #ff6a00;" href="#">Bạn chưa đăng ký thông tin? <b>Đăng ký tại đây</b></a></div>
                                 <div class="small mt-2"><a style="text-decoration: none; color: #ff6a00;" href="#" onclick="submitForm()">Bạn quên mật khẩu? <b>Đặt lại mật khẩu</b></a></div>
                                 @*<div class="small mt-2"><a style="text-decoration: none; color: #001D85; " href="@Url.Action("ForgotPassword", "Auth")">Bạn quên mật khẩu? <b>Đặt lại mật khẩu</b></a></div>*@
                             </div>
                             <hr class="mt-4 mb-4" />
-                            <div class="small text-center mt-2"><a style="text-decoration: none; color: #ff6a00; " href="@Url.Action("Index", "LienCapTHCS")">Đăng ký xét tuyển Trường TH, THCS, THPT Hồng Đức? <b>Tại đây</b></a></div>
+                            <div class="small text-center mt-2 mb-4"><a style="text-decoration: none; color: #ff6a00; word-spacing: -2.5px !important;" href="@Url.Action("Index", "LienCapTHCS")">Đăng ký xét tuyển Trường TH, THCS, THPT Hồng Đức? <b>Tại đây</b></a></div>
                         </div>
                     </div>
                 </div>
                 <div class="col-xl-12" id="signupForm" style="display: none;">
                     <div class="card">
                         <div class="card-body">
-                            <h5 class="card-title text-uppercase colorlogin" style="text-align: center; font-weight:unset">Đăng kí tài khoản</h5>
+                            <h5 class="card-title text-uppercase colorlogin" style="text-align: center; font-weight:unset">Đăng ký tài khoản</h5>
                             <hr />
                             <div>
                                 <span id="errorMessage" class="small mb-1 text-danger"></span>
@@ -617,51 +617,79 @@
                     </div>
                 </div>
             </div>
-            <div class="toast-container position-fixed bottom-0 end-0 p-3">
-                <div id="myToast" class="toast" role="alert" aria-live="assertive" aria-atomic="true">
-                    <div class="toast-header">
-                        <strong class="me-auto">Toast Title</strong>
-                        <button type="button" class="btn-close" data-bs-dismiss="toast" aria-label="Close"></button>
-                    </div>
-                    <div class="toast-body">
-                    </div>
-                </div>
-            </div>
-            <div id="loadingModal" class="modal fade" tabindex="-1" role="dialog" aria-labelledby="loadingModalLabel" aria-hidden="true">
-                <div class="modal-dialog modal-dialog-centered">
-                    <div class="modal-content">
-                        <div class="modal-body text-center">
-                            <div class="spinner-border text-primary" role="status">
-                                <span class="visually-hidden">Loading...</span>
-                            </div>
-                        </div>
-                    </div>
+        </div>     
+    </div>
+    <div class="row">
+        <div id="leftPanel" class="col-xxl-8 col-12">
+            <hr />
+            <div class="row">
+                <div class="col-xl-12">
+                    <p class="m-0 colorlogin"><b>LIÊN HỆ</b></p>
+                    <p class="m-0 colorlogin">- Phòng Quản lý đào tạo - Phòng 208 Nhà điều hành, Số 565 Quang Trung - Phường Đông Vệ - TP.Thanh Hóa</p>
+                    <p class="m-0 colorlogin">- Điện thoại: (0237).3910.222, Fax: (0237).3910.475, trang chủ: <a href="http://hdu.edu.vn" class="card-link">www.hdu.edu.vn</a> </p>
                 </div>
             </div>
         </div>
-        <div class="row" style="padding-top:5px">
-            <div class="col-xl-8">
-                <div class="row">
-                    <div class="col-xl-12">
-                        <hr />
-                        <p class="m-0 colorlogin"><b>LIÊN HỆ</b></p>
-                        <p class="m-0 colorlogin">- Phòng Quản lý đào tạo - Phòng 208 Nhà điều hành, Số 565 Quang Trung - Phường Đông Vệ - TP.Thanh Hóa</p>
-                        <p class="m-0 colorlogin">- Điện thoại: (0237).3910.222, Fax: (0237).3910.475</p>
-                        <p class="m-0 colorlogin">- Homepage: <a href="http://hdu.edu.vn" class="card-link">www.hdu.edu.vn</a> </p>
-                    </div>
-                </div>
+        <div id="rightPanel" class="col-xxl-4 col-12">
+            <hr />
+            <div class="row">
+                <p class="m-0 colorlogin"><b>LIÊN KẾT TUYỂN SINH</b></p>
+                <p class="m-0 colorlogin">- Thông tin tuyển sinh ĐH Hồng Đức</p>
+                <p class="m-0 colorlogin">- Video giới thiệu về ĐH Hồng Đức </p>
             </div>
-            <div class="col-xl-4">
-                <div class="row">
-                    <div class="col-xl-12">
-                        <hr />
-                        <p class="m-0 colorlogin"><b>LIÊN KẾT TUYỂN SINH</b></p>
-                        <p class="m-0 colorlogin">- Thông tin tuyển sinh ĐH Hồng Đức</p>
-                        <p class="m-0 colorlogin">- Tra cứu kết quả truyển sinh</p>
-                        <p class="m-0 colorlogin">- Video giới thiệu về ĐH Hồng Đức </p>
-                    </div>
+        </div>
+       
+    </div>
+</div>
+<div class="toast-container position-fixed bottom-0 end-0 p-3">
+    <div id="myToast" class="toast" role="alert" aria-live="assertive" aria-atomic="true">
+        <div class="toast-header">
+            <strong class="me-auto">Toast Title</strong>
+            <button type="button" class="btn-close" data-bs-dismiss="toast" aria-label="Close"></button>
+        </div>
+        <div class="toast-body">
+        </div>
+    </div>
+</div>
+<div id="loadingModal" class="modal fade" tabindex="-1" role="dialog" aria-labelledby="loadingModalLabel" aria-hidden="true">
+    <div class="modal-dialog modal-dialog-centered">
+        <div class="modal-content">
+            <div class="modal-body text-center">
+                <div class="spinner-border text-primary" role="status">
+                    <span class="visually-hidden">Loading...</span>
                 </div>
             </div>
         </div>
     </div>
 </div>
+<script>
+    var gioi_thieu_tuyen_sinh = document.getElementById('leftPanel');
+    var dang_nhap_he_thong = document.getElementById("rightPanel");
+
+    $(document).ready(function () {
+
+        if (window.innerWidth <= 1400) {
+            gioi_thieu_tuyen_sinh.style.display = "none";
+            dang_nhap_he_thong.classList.remove("col-xxl-4 col-12");
+
+        }
+        else {
+            gioi_thieu_tuyen_sinh.style.display = "inline";
+            dang_nhap_he_thong.classList.add("col-xxl-4 col-12");
+
+        }
+    });
+    function reportWindowSize() {
+        if (window.innerWidth <= 1400) {
+            gioi_thieu_tuyen_sinh.style.display = "none";
+            dang_nhap_he_thong.classList.remove("col-xxl-4 col-12");
+
+        }
+        else {
+            gioi_thieu_tuyen_sinh.style.display = "inline";
+            dang_nhap_he_thong.classList.add("col-xxl-4 col-12");
+
+        }
+    }
+    window.onresize = reportWindowSize;
+</script>
