#update xuat phieu tong hop

--- a/Views/DangKyXetTuyens/dkxthocba.cshtml
+++ b/Views/DangKyXetTuyens/dkxthocba.cshtml
@@ -61,7 +61,7 @@
                 <div class="row">
                     <div class="col-xxl-12">
                         <center>
-                            <button id="bt_xuat_phieu_tong_hop" class="btn btn-outline-success"> In phiếu tổng hợp</button>
+                            <button id="bt_xuat_phieu_tong_hop" class="btn btn-outline-success"> Xuất phiếu tổng hợp</button>
                             <a class="btn btn-outline-primary" onclick="HienTHi_ThemNguyenVongMoi_OnClick(0,0,0)">Thêm nguyện vọng</a>
                         </center>
                     </div>
