--- a/Views/DangKyXetTuyens/dkdtnk.cshtml
+++ b/Views/DangKyXetTuyens/dkdtnk.cshtml
@@ -61,7 +61,7 @@
                 <div class="row">
                     <div class="col-xxl-12">
                         <center>
-                            <button id="bt_xuat_phieu_tong_hop_kq" class="btn btn-outline-success">Xuất phiếu tổng hợp</button>
+                            <button id="bt_xuat_phieu_tong_hop" class="btn btn-outline-success">Xuất phiếu tổng hợp</button>
                             <a class="btn btn-outline-primary" id="bt_add_div_list_registration">Thêm nguyện vọng</a>
                         </center>
                     </div>
@@ -286,7 +286,9 @@
 <script>
     $(document).ready(function () {
         ts_dkxt_thptqg_list_all();
-
+        $('#bt_xuat_phieu_tong_hop').click(function () {
+            window.location.href = '/ExportFile/DownloadFile_XetTuyenThiNangKhieu';
+        });
     });
     function ts_dkxt_thptqg_list_all() {
         let _output = "";
